2001-12-20  shawn  <sabetts@vcn.bc.ca>

	* nethack-api.el (nethack-api-update-status): take 1 argument
	which is an alist of status properties. Print each status
	property.

	* nethack.el (nh-sentinel): evaluate any remaining lisp code when
	the lisp process gets a sentinel event.

2001-12-19  shawn  <sabetts@vcn.bc.ca>

	* nethack.el: require nethack-glyphs
	(nethack-use-glyphs): new variable

	* nethack-api.el (nethack-api-print-glyph): add argument `tile'
	(nethack-api-print-glyph): draw graphical tiles, when graphics are
	enabled.
	(nethack-api-clear-nhwindow): fill the map with empty graphical
	tiles, when graphics are enabled.

2001-12-04  Ryan Yeske  <rcyeske@sfu.ca>

	* nethack-api.el (nethack-cook-status): Rename from
	nh-cooked-status.

2001-12-02  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el (nethack-return): Remove.
	(nh-use-cooked-status): New variable.
	(nethack-api-update-status): New function.
	(nethack-api-get-command): Comment out, it is obsolete with new
	comint process handling.
	(nethack-restore-window-configuration): Rename from
	nethack-setup-window-configuration.
	(nethack-api-create-message-window)
	(nethack-api-create-status-window, nethack-api-create-map-window)
	(nethack-api-create-inventory-window)
	(nethack-api-create-menu-window, nethack-api-create-text-window):
	New function.

	* nethack-cmd.el (defun-nethack-command): Update to handle new
	process handling code nh-send-and-wait.

	* nethack.el (nethack): Use comint to communicate with process.
	(nh-comint-mode): New function.
	(nethack-process-buffer-name): Remove.
	(nethack-process-name): Remove.
	(nethack-start-program): Remove.
	(nethack-process-send-string): Remove.
	(nh-send): New function.
	(nh-send-and-wait): New function.
	(nethack-status-line-number, nethack-status-line):
	Remove.
	(nh-sentinel): New function.
	(nh-filter): New function.

2001-10-23  shawn  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-parse-status-lines): flags are highlighted